Fixed left sidebar alignment

--- a/less/custom/custom-nav.less
+++ b/less/custom/custom-nav.less
@@ -192,6 +192,7 @@ body {
       .navbar-form {
         margin-top: 0;
         border-top: 0;
+        padding-bottom: 9px;
       }
     }
     #sidebar-right {
